--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
 			type="image/svg+xml"
 			href="/public/Jacaranda-Country-club-wedding-photographer-florida-venue-sonju-diana-marcos14.jpg"
 		/>
+
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Wedding</title>
 	</head>
 	<body>
 		<div id="root"></div>
+		<script
+			type="module"
+			src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+		></script>
+		<script
+			nomodule
+			src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+		></script>
 		<script type="module" src="/src/main.jsx"></script>
 	</body>
 </html>
