--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 		<link
 			rel="icon"
 			type="image/svg+xml"
-			href="/public/hkmjfi2aliqc2hltb5su.jpg"
+			href="/public/Jacaranda-Country-club-wedding-photographer-florida-venue-sonju-diana-marcos14.jpg"
 		/>
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Our wedding</title>
+		<title>Wedding</title>
 	</head>
 	<body>
 		<div id="root"></div>
